# agent-company

./: .gitignore  CNAME  LICENSE.md  MANIFEST.in  README.md  cli.py  doc.html  managed_cli.py  pyproject.toml
application/cohort_builder/: toolkit.py
application/strategy/: toolkit.py
application/ui/: toolkit.py
driver/: __init__.py  agents.py  local_python_executor.py  memory.py  models.py  tools.py  types.py
src/agentcompany.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentcompany/application/actuarial/: instance.py  protocol.py  toolkit.py
src/agentcompany/application/ceo/: __init__.py  instance.py
src/agentcompany/application/consultant/: __init__.py  create.py  instance.py  toolkit.py
src/agentcompany/application/manager/: __init__.py  instance.py  toolkit.py
src/agentcompany/application/strategy/: mongodb.py
src/agentcompany/application/ui/: toolkit.py
src/agentcompany/driver/: __init__.py  agent_app.py  agents.py  dataclasses.py  default_agents.py  default_tools.py  dict.py  errors.py  framework.py  json.py  local_bash_executor.py  local_python_executor.py  markdown.py  memory.py  models.py  monitoring.py  prompts.py  runner.py  surreal_executor.py  utils.py  xml.py
src/agentcompany/extensions/agents/: bash.py  dataset.py  duckdb.py  flow.py  function.py  graphql.py  json.py  postgres.py  psql.py  python.py  scribe.py  sequence.py  sql.py  tfserving.py
src/agentcompany/extensions/company/: base.py
src/agentcompany/framework/: ambient.py  base.py  company.py  flow.py  function.py  graph.py  multistep.py  prompt_template.py  react.py  restapi.py  runner.py  scribe.py  sequence.py  shot.py
src/agentcompany/lib/agents/: bash.py  (+7 more)
src/agentcompany/llms/: base.py  memory.py  monitoring.py  openai.py  utils.py
src/agentcompany/mcp/: _function_type_hints_utils.py  base.py  source_code.py  utils.py  validation.py
src/application/strategy/: toolkit.py
src/application/ui/: toolkit.py
src/driver/: _function_type_hints_utils.py
test/: graphql.py  psql.py  surrealdb.py  tfserving.py
(+45 files in other folders)
